fixes css spacing on descriptions

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -61,9 +61,9 @@ h4
     color: #FFF
     position: absolute
     padding: 20px 60px
-    bottom: 0
-    left: 0
-    right: 0
+    bottom: 10px
+    left: 10px
+    right: 10px
     background: rgba(0,0,0,0.25)
     z-index: 10
     text-shadow: 1px 1px 1px rgba(0,0,0,0.25)
